Agregué mi canal de Youtube

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>Este es mi proyecto de PreWork con el profe Ricardo Celis</p>
+    <p>Sígueme en Youtube en mi canal Aldo Juárez :)</p>
 </body>
 </html>
